--- a/intro.html
+++ b/intro.html
@@ -89,7 +89,7 @@
 
 				<div class="fullscreen-bg">
   <video loop muted autoplay poster="#" class="fullscreen-bg__video">
-    <source src="../Website/images/intro.mp4" type="video/mp4"> 
+    <source src="images/intro.mp4" type="video/mp4"> 
     
       <h3>Hello</h3>
       
